Fixing edit/delete wrapping. Changed zebra striping. [Refs #65823056]

--- a/app/assets/stylesheets/modules-tables.css.scss
+++ b/app/assets/stylesheets/modules-tables.css.scss
@@ -98,6 +98,9 @@ th {
   &.odd + .fields_price {
     background: #f4f4f4;
   }
+  .edit {
+    white-space: nowrap;
+  }
   .edit-price > .font-icon {
     font-size: smaller;
   }
@@ -227,6 +230,10 @@ th {
 
     th {
       font-size: 12px;
+
+      &:first-child {
+        font-size: 16px;
+      }
     }
 
     tr {
